- UI:
	- Windows that show despite the UI being disabled (i.e., Vessel Switcher and Score windows) store a separate size and location for that mode.
	- Use a resize handle instead of buttons for horizontally resizing the Vessel Switcher window.
- AI / WM:
	- When ramming, if the target is also trying to ram us, aim more directly at them (avoids unstable dynamics).
	- Fix some depthkeeping logic with Submarine AI.
	- Guard Mode toggles off if enabled when loading into a battle site from the KSC that had active combatants at the time player previously exited to Space Center.
	- Fix secondary target assignment logic assigning targets irrespective of target priority settings.
	- Add UNDERWATER_VISION view distance option so ships require sonar to detect submerged subs, and submerged subs require sonar to detect other vessels vs being able to see them as long as they are within guard range.
	- Add attack logic for gun-armed submarines when BULLET_WATER_DRAG is disabled.
	- AI now respect target priority settings when looking at landed or splashed targets.
- Countermeasures:
	- Add missing Active Sonar countermeasure.
- Detectors:
	- Fix Radars utilizing a max of 3 locks, regardless of radar-lock capable radars present on a vessel.
	- Enemy passive sonars no longer show up on the Radar Warning Reciever.
	- IRSTs now return the hottest enemy target they detect, rather than whatever is first on the targets list when using it for manually firing heatseeking missiles.
	- Fix multiple radars locking the same targets; radars will now properly distribute targets to lock amongst themselves.
	- Fix Radar GUI not properly displaying radars using custom radarTransforms.
- Weapons:
	- Bullets now take relative velocity into account when calculating damage.
	- Fix Dual-mode APS turrets getting slaved to radar when firing on standard targets and not subsequently engaging incoming missile targets.
	- Fix APS occasionally getting stuck on phantom targets.
	- Missiles: