@@ -7,12 +7,13 @@
 	- Use a resize handle instead of buttons for horizontally resizing the Vessel Switcher window.
 - AI / WM:
 	- When ramming, if the target is also trying to ram us, aim more directly at them (avoids unstable dynamics).
-	- Fix some depthkeeping logic with Submarine AI.
+	- Fix some depth-keeping logic with Submarine AI.
 	- Guard Mode toggles off if enabled when loading into a battle site from the KSC that had active combatants at the time player previously exited to Space Center.
 	- Fix secondary target assignment logic assigning targets irrespective of target priority settings.
 	- Add UNDERWATER_VISION view distance option so ships require sonar to detect submerged subs, and submerged subs require sonar to detect other vessels vs being able to see them as long as they are within guard range.
 	- Add attack logic for gun-armed submarines when BULLET_WATER_DRAG is disabled.
 	- AI now respect target priority settings when looking at landed or splashed targets.
+	- VTOL AI makes sure Landed status is disabled during take-off.
 - Countermeasures:
 	- Add missing Active Sonar countermeasure.
 - Detectors:
@@ -25,6 +26,7 @@
 	- Bullets now take relative velocity into account when calculating damage.
 	- Fix Dual-mode APS turrets getting slaved to radar when firing on standard targets and not subsequently engaging incoming missile targets.
 	- Fix APS occasionally getting stuck on phantom targets.
+	- Rework aiming logic for improved long-range aiming for vessels moving at orbital speeds (still not entirely correct for low Kerbin orbit at longer ranges, but significantly better).
 	- Missiles:
 		- Fix missiles not firing on surface ships.
 		- Missiles now properly receive explosive damage from point defense HE rounds/interceptor missiles in paintball mode.
